[gd_scene load_steps=2 format=3 uid="uid://dnaxir3ffkxju"]

[ext_resource type="Script" path="res://main.gd" id="1_ycdy6"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ycdy6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ButtonValueNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Value"

[node name="ButtonAddOpNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "A + B"

[node name="ButtonSubOpNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "A - B"

[node name="ButtonMulOpNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "A x B"

[node name="ButtonDivOpNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "A / B"

[node name="ButtonSumOpNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Σ"

[node name="ButtonProdOpNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Π"

[node name="ButtonTableNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Table"

[node name="ButtonFuncNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Function"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonDelete" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonArrangeNodes" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Arrange Nodes"

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonNew" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "New Graph"

[node name="ButtonSave" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Save
"

[node name="ButtonLoad" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Load
"

[node name="ButtonExport" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Export"

[node name="ButtonImport" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Import"

[node name="GraphEdit" type="GraphEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
right_disconnects = true

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(452, 162)
access = 2

[node name="ExportDialog" type="AcceptDialog" parent="."]
title = "Export data"

[node name="TextEditExport" type="TextEdit" parent="ExportDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 51.0

[node name="ImportDialog" type="AcceptDialog" parent="."]
title = "Import data"

[node name="TextEditImport" type="TextEdit" parent="ImportDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 51.0

[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonValueNode" to="." method="_on_button_value_node_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonAddOpNode" to="." method="_on_button_add_op_node_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonSubOpNode" to="." method="_on_button_sub_op_node_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonMulOpNode" to="." method="_on_button_mul_op_node_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonDivOpNode" to="." method="_on_button_div_op_node_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonSumOpNode" to="." method="_on_button_sum_op_node_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonProdOpNode" to="." method="_on_button_prod_op_node_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonTableNode" to="." method="_on_button_table_node_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonFuncNode" to="." method="_on_button_func_node_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonDelete" to="." method="_on_button_delete_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonArrangeNodes" to="." method="_on_button_arrange_nodes_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonNew" to="." method="_on_button_new_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonExport" to="." method="_on_button_export_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonImport" to="." method="_on_button_import_pressed"]
[connection signal="connection_request" from="HBoxContainer/GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="HBoxContainer/GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="confirmed" from="ImportDialog" to="." method="_on_import_dialog_confirmed"]
